# the-download-manager

./: .babelrc.json  .eslintrc.json  .gitignore  README.md  bun.lockb  download_config.ts  forge.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  the-download-manager.code-workspace  the-dw-mgr.code-workspace  tsconfig.json  types.d.ts  utility_config.ts  utility_plugin.ts  vite.config.ts  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
.fleet/: settings.json
shared/: types.ts
src/: App.tsx  AppBarComponent.tsx  Download.tsx  Home.tsx  MenuLink.tsx  ScheduleDownloadModal.tsx  Settings.tsx  download.ts  index.css  index.html  index.ts  main.tsx  preload.ts  renderer.ts  server.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: download.rs  lib.rs  main.rs  tauri_state.rs  util.rs
src-tauri/src/download/: curl_handler.rs
src-tauri/src/util/: db.rs  download.rs  tauri_state.rs
src-tauri/webdriver/selenium/: pnpm-lock.yaml
src-tauri/webdriver/selenium/test/: test.js
src/components/: AppRoot.tsx  DownloadItem.tsx  HomePage.tsx
webdriver/selenium/: package.json
webdriver/selenium/test/: test.js
