[package]
name = "the-dw-mgr"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
actix-web = "4.9.0"
tokio = "*"
futures-util = "0.3.31"
ureq = "3.0.3"
reqwest = "0.12.12"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
